--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gh-pages": "^3.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d ."
   },
   "keywords": [],
   "author": "",
